# polars-gw

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  graph.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
example/: index.html  package-lock.json  package.json  server.py  walk_demo.py
example/src/: App.jsx
gw_polars/: __init__.py  executor.py  fields.py  types.py  viz.py
gw_polars/viz_assets/: __init__.py  versions.json
js/: .npmrc  README.md  build.mjs  entry.css  entry.jsx  package-lock.json  package.json  tailwind.config.cjs
polars_gw/: __init__.py  executor.py  fields.py  viz.py
polars_gw/viz_assets/: __init__.py  graphic-walker.css
tests/: conftest.py  test_executor.py  test_fields.py  test_viz.py
viz_pkg/: README.md  pyproject.toml
viz_pkg/polars_gw_viz/: __init__.py
