[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gw-polars"
dynamic = ["version"]
description = "Native Polars computation engine for Graphic Walker — translates GW workflow payloads directly to Polars operations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Edward van Eechoud" },
]
keywords = ["graphic-walker", "polars", "data-visualization", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "polars>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/Edwardvaneechoud/polars-gw"
Repository = "https://github.com/Edwardvaneechoud/polars-gw"
Issues = "https://github.com/Edwardvaneechoud/polars-gw/issues"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
example = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
]

[tool.hatch.version]
path = "gw_polars/__init__.py"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
