[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polars-gw-viz"
version = "0.1.1"
description = "Bundled Graphic Walker assets for polars-gw[viz]"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Edward van Eechoud" },
]

[project.urls]
Homepage = "https://github.com/Edwardvaneechoud/polars-gw"

[tool.hatch.build.targets.wheel]
packages = ["polars_gw_viz"]

[tool.hatch.build.targets.wheel.force-include]
"polars_gw_viz/graphic-walker.js" = "polars_gw_viz/graphic-walker.js"
"polars_gw_viz/graphic-walker.css" = "polars_gw_viz/graphic-walker.css"
"polars_gw_viz/versions.json" = "polars_gw_viz/versions.json"
