[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polars-gw-viz"
version = "0.1.1"
description = "Bundled Graphic Walker JS/CSS assets for polars-gw"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Edward van Eechoud" },
]
keywords = ["graphic-walker", "polars", "data-visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/Edwardvaneechoud/polars-gw"
Repository = "https://github.com/Edwardvaneechoud/polars-gw"

[tool.hatch.build.targets.wheel]
packages = ["polars_gw_viz"]

[tool.hatch.build.targets.wheel.force-include]
"polars_gw_viz/graphic-walker.js" = "polars_gw_viz/graphic-walker.js"
"polars_gw_viz/graphic-walker.css" = "polars_gw_viz/graphic-walker.css"
"polars_gw_viz/versions.json" = "polars_gw_viz/versions.json"
